Fix sponsor logo overlap on phone.

--- a/files/static/less/navbar.less
+++ b/files/static/less/navbar.less
@@ -95,6 +95,22 @@ nav.subnavbar {
     .navbar-nav {
         margin-top: 0;
     }
+
+    .top-menu-img {
+        float: left;
+    }
+
+
+    #login_menu {
+        z-index: 9999;
+        margin-top: -10px;
+    }
+
+    #login_menu ul {
+        background: #222;
+    }
+
+
 }
 
 .navbar-collapse {
